infra/k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: waypoint
spec:
  selector:
    app: frontend
  ports:
    - port: 3005
      targetPort: 3005
